tests/sksl/errors/MultipleFields.glsl
### Compilation failed:

error: 1: field 'var' was already defined in the same struct ('Varyings')
1 error
